Fixed visibility for view profile and added logic for filled out form

--- a/frontend/view_profile/style.css
+++ b/frontend/view_profile/style.css
@@ -19,7 +19,7 @@
 } */
 
 .change-info-form {
-    background-color: #f1f1f1;
+    background-color: white;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
